<resources>
    <string name="app_name">Assignment</string>
    <string name="Test_Greeting">Good morning, Mohammad Faraj ☀️</string>
    <string name="firstimagediscription">FirstImageDiscription</string>
    <string name="click_on_the_icon">Tasks</string>
    <string name="click_on_the_icon2">Upcoming Exams</string>
    <string name="click_on_the_icon3">Grades</string>
    <string name="line">____________________________________________________________</string>
    <string name="Bottom_message">                    You have no impotent messages </string>
    <string name="english_essay">English essay</string>
    <string name="tech_assignment">Tech assignment</string>
    <string name="write_your_task">Write your task..</string>
    <string name="task_description">Task description...</string>
    <string name="due_date">Due date</string>
    <string name="you_have_no_upcoming_exams">You have no upcoming exams</string>
    <string name="first_name">First name:</string>
    <string name="last_name">last name:</string>
    <string name="save">save</string>
</resources>