<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/newback_1"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:ems="10"
            android:gravity="left|top"
            android:hint="@string/write_your_task"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:id="@+id/taskText"
            android:textSize="15sp">

            <requestFocus />
        </EditText>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="serif"
            android:text="@string/task_description"
            android:id="@+id/taskDescription"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:id="@+id/taskDate"
            android:fontFamily="serif"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="@string/due_date"

            />



        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:text="Submit"
            android:onClick="submit"
            />


    </LinearLayout>




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menuBar"
        android:layout_alignParentBottom="true"
        app:menu="@menu/nav_menu"

        />

</RelativeLayout>